Initialized an admin page with dummy data, fixed chart/dropdown overlapping

--- a/client/digitek/src/Components/Navbar/style.css
+++ b/client/digitek/src/Components/Navbar/style.css
@@ -66,6 +66,7 @@
   border: 1px solid;
   border-radius: 6px;
   min-width: 140px;
+  z-index: 1000;
 }
 
 .dropdown-item {
